@@ -1,0 +1,35 @@
+int a, b, c, d;
+
+static void
+foo (int *x)
+{
+  c = 0;
+  while (1)
+    {
+      if (*x)
+break;
+      while (b)
+for (; c; c = 0);
+      for (d = 18; d != 18; d++)
+if (c)
+  {
+    foo (x);
+    return;
+  }
+    }
+}
+
+static void
+bar ()
+{
+  foo (0);
+  foo (0);
+  for (;;)
+    ;
+}
+
+baz ()
+{
+  for (; a;)
+    bar ();
+}
